--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
     <div class="contents">
       <h3 class="section-title">学べるレッスン</h3>
       <div class="contents-item">
-        <img src="https://prog-8.com/shared/images/lesson/html/study/html.svg">
+        <img src="https://github.com/cocodajeong/sample/blob/0a455c83d8133f3b454aee62b5b6d832dd19f1cb/html.png">
         <p>HTML&CSS</p>
       </div>
       <div class="contents-item">
-        <img src="https://prog-8.com/shared/images/lesson/html/study/php.svg">
+        <img src="https://github.com/cocodajeong/sample/blob/0a455c83d8133f3b454aee62b5b6d832dd19f1cb/php.png">
         <p>PHP</p>
       </div>
       <div class="contents-item">
-        <img src="https://prog-8.com/shared/images/lesson/html/study/ruby.svg">
+        <img src="https://github.com/cocodajeong/sample/blob/0a455c83d8133f3b454aee62b5b6d832dd19f1cb/Ruby.png">
         <p>Ruby</p>
       </div>
       <div class="contents-item">
-        <img src="https://prog-8.com/shared/images/lesson/html/study/swift.svg">
+        <img src="https://github.com/cocodajeong/sample/blob/0a455c83d8133f3b454aee62b5b6d832dd19f1cb/swift.png">
         <p>Swift</p>
       </div>
     </div>
