--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>PHP</p>
       </div>
       <div class="contents-item">
-        <img src="https://github.com/cocodajeong/sample/blob/0a455c83d8133f3b454aee62b5b6d832dd19f1cb/Ruby.png">
+        <img src="https://github.com/cocodajeong/sample/blob/main/Ruby.png?raw=true">
         <p>Ruby</p>
       </div>
       <div class="contents-item">
