--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <div class="contents">
       <h3 class="section-title">学べるレッスン</h3>
       <div class="contents-item">
-        <img src="https://github.com/cocodajeong/sample/blob/0a455c83d8133f3b454aee62b5b6d832dd19f1cb/html.png">
+        <img src="https://github.com/cocodajeong/sample/blob/main/html.png?raw=true">
         <p>HTML&CSS</p>
       </div>
       <div class="contents-item">
-        <img src="https://github.com/cocodajeong/sample/blob/0a455c83d8133f3b454aee62b5b6d832dd19f1cb/php.png">
+        <img src="https://github.com/cocodajeong/sample/blob/main/php.png?raw=true">
         <p>PHP</p>
       </div>
       <div class="contents-item">
@@ -42,7 +42,7 @@
         <p>Ruby</p>
       </div>
       <div class="contents-item">
-        <img src="https://github.com/cocodajeong/sample/blob/0a455c83d8133f3b454aee62b5b6d832dd19f1cb/swift.png">
+        <img src="https://github.com/cocodajeong/sample/blob/main/swift.png?raw=true">
         <p>Swift</p>
       </div>
     </div>
